# MotorSim

./: .gitignore  MotorPropSimulation.py  README.md  pyproject.toml
motorsim/: models.py  motor_sim.ipynb  motor_sim_pmsm.ipynb  systems.py
motorsim/models/: clark_park_transforms.py  dc_models.py  pmsm_motor.py  svpwm.py  systems.py
motorsim/tests/: test_dc_motor_deriv.py  test_transforms.py
motorsim/utils/: clark_park_transforms.py  plotting.py
